# warp-contracts-rust

./: .gitignore  LICENSE.md  README.md
atw/: package.json
atw/contract/definition/: Cargo.toml
atw/contract/definition/bindings/json/: ContractState.json  View.json  WriteAction.json
atw/contract/definition/bindings/ts/: AtwContract.ts  ContractState.ts  View.ts  WriteAction.ts
atw/contract/definition/src/: action.rs  generate_json.rs  state.rs
atw/deploy/local/: interact-registerUploader-local.js  interact-requestArchiving-local.js  interact-submitArchive-local.js  read-archiveRequestFor-local.js  read-contract-state-local.js
atw/deploy/mainnet/: deploy-mainnet.js  interact-requestArchiving-mainnet.js  interact-upgradeState-mainnet.js  read-archiveRequestFor-mainnet.js  read-archivesByUrl-mainnet.js  read-contract-state-mainnet.js
atw/deploy/scripts/: evolve.js  interact.js  read.js
atw/deploy/testnet/: interact-registerUploader-testnet.js  interact-requestArchiving-testnet.js  interact-submitArchive-testnet.js  read-archivesByURLtestnet.js  read-contract-state-testnet.js
atw/tests/: contract.spec.ts
atw/tests/data/: test_state.json
awt/: .eslintrc.json  .gitignore  package.json
awt/contract/definition/: Cargo.toml
awt/contract/implementation/: Cargo.toml
awt/deploy/local/: contract-tx-id.txt  evolve-local.js  interact-registerUploader-local.js  read-archiveRequestFor-local.js  read-archivesByURL-local.js
awt/deploy/mainnet/: contract-tx-id.txt  evolve-mainnet.js  interact-registerUploader-mainnet.js  (+2 more)
awt/tests/: contract.spec.ts
(+50 files in other folders)
