[package]
name = "atw"
version = "0.1.0"
edition = "2021"
description = "Archive The Web contract definition"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-test = "0.4.2"
schemars = "0.8.10"
strum = "0.15"
strum_macros = "0.15"
rand = "0.7.0"
